refactor: improve code readability and consistency in annotations and method handling